@@ -10,7 +10,7 @@ DEB_PYTHON_INSTALL_ARGS_ALL := --no-compile --install-scripts usr/share/apport
 
 pre-build::
 	# install appropriate backends
-	cp backends/packaging-dpkg.py apport/packaging_impl.py
+	cp backends/packaging-apt-dpkg.py apport/packaging_impl.py
 
 common-post-build-indep::
 	make -C po
